tests/pass/function_call.jlite
class Test {
    Void main() {
        Second c;
        c.id();
        return;
    }
}

class Second {
    Int id() {
        println("Hello");

        this.duplicate(4);
    }

    Int duplicate(Int a) {
        return a * 9;
    }
}