tests/fail/bad_parameter_type.jlite
class Main {
    Void main(Int a) {
        Hello h;
        h.greet("John");
    }
}
class Hello {
    Void greet(Int z) {
        println("Hello !");
        println(z);
    }
}